# cosmic-hdr-tuner

./: .gitignore  Cargo.toml  README.md  cosmic-hdr-tuner.desktop  install.sh  uninstall.sh
src/: main.rs
